--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Music Bot",
+  "name": "apna bot",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "logo": "https://telegra.ph/file/41871555394988009d3ca.jpg",
   "keywords": ["music", "voicechat", "telegram"],
